--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="A small portfolio website"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
@@ -35,7 +35,9 @@
   crossorigin></script>
 
 <script>var Alert = ReactBootstrap.Alert;</script>
-    <title>React App</title>
+    <title>Daniel Kline</title>
+
+  <meta property="og:image" content="portfolio.jpg">
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
